<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OrderActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/order_intro_text"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="6dp"
        android:textSize="18sp"
        android:text="Choose a delivery method:"
        android:layout_width="match_parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameday"
            android:text="@string/same_day"
            android:onClick="onRadioClicked"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextday"
            android:text="@string/next_day"
            android:onClick="onRadioClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup"
            android:text="@string/pick_up"
            android:onClick="onRadioClicked"/>
    </RadioGroup>

</LinearLayout>